--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 google-api-python-client==2.123.0
+packaging==25.0
+pymupdf
